+ (Check-in) Improved the layout of the next-gen check-in schedule select screen when too many schedules were available to fit in one row. The screen will now wrap the buttons to multiple rows of buttons. (Fixes #6371)

--- a/RockWeb/Styles/Blocks/Checkin/CheckInKiosk.css
+++ b/RockWeb/Styles/Blocks/Checkin/CheckInKiosk.css
@@ -519,6 +519,7 @@
  */
 .check-in-page .schedule-select-screen .button-list {
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
